--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Bill Splitter - Easily divide expenses."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <meta name="og:title" content="Bill Splitter" />
+    <meta
+      name="og:description"
+      content="Bill Splitter - Easily divide expenses"
+    />
+    <title>Bill Splitter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
